# loviv

./: .env  main.py  pyproject.toml  requirements.txt
__pycache__/: composants.cpython-312.pyc.1916060691248  composants.cpython-312.pyc.2567470312240  landing_page.cpython-312.pyc.1470539226672
pages/: accueil.py  add_produit.py  first_login_page.py  headers.py  landing_page.py  menu.py  stock.py  test.py  test2.py  ventes.py
utils/: __init__.py
